--- a/style.css
+++ b/style.css
@@ -145,3 +145,11 @@ body, html {
   font-size: 12px;
   color: #fff8;
 }
+
+.screen {
+  display: none;
+}
+
+.screen.active {
+  display: block;
+}
