--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: #f8f4e6;
+  background: #F8F0DE;
   height: 100vh;
   color: #333;
   display: flex;
