--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: #F4E3C1;
+  background: #EDE3D4;
   height: 100vh;
   color: #333;
   display: flex;
@@ -165,7 +165,7 @@ body, html {
 
 
 #player-setup-screen {
-  background-color: #F4E3C1;
+  background-color: #EDE3D4;
   min-height: 100vh;
   padding: 20px;
   display: flex;
