--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body, html {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: #F2E6CE;
+  background: #F9F1E7;
   height: 100vh;
   color: #333;
   display: flex;
@@ -165,7 +165,7 @@ body, html {
 
 
 #player-setup-screen {
-  background-color: #F2E6CE;
+  background-color: #F9F1E7;
   min-height: 100vh;
   padding: 20px;
   display: flex;
